fixed table in project vs publication spacing issue (used publication css for both; debug later

--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ p {
 .columns {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 20px;
 }
 
 // section layout
@@ -93,12 +93,10 @@ p {
     display: flex;
     flex-direction: column;
     gap: 7px;
-
     i {
         font-size: $font-size + 1pt;
         color: black;       
     }
-
     a {
         text-decoration: none;
         display: flex;
@@ -188,9 +186,14 @@ p {
 
 // publication section
 .publication{ 
-padding-left: 49px;
+//padding-left: 49px;
  i {
     font-size: $font-size + 1pt;     
+    }
+
+    img {
+    width: 100%; //120px;
+    height: auto; //80px;
     }
 }
 
